fix effect on mobile

--- a/public/style.css
+++ b/public/style.css
@@ -98,7 +98,17 @@ a.card {
     transition-delay: 0.3s;
   }
   
-  
+@media (max-width: 992px) {
+    .card-outer:nth-child(1) {
+        transition-delay: 0.1s;
+      }
+    .card-outer:nth-child(2) {
+        transition-delay: 0.1s;
+    }
+    .card-outer:nth-child(3) {
+        transition-delay: 0.1s;
+    }
+}
 
 a.card:hover {
     box-shadow: 0 4px 20px rgba(0, 0, 0, 0.1);
